// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Is disabled 1`] = `
.c1 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c1 {
  margin-left: 0.5rem;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: calc(1rem - 2px);
  margin: 0;
  outline: none;
  padding: 0.5rem;
  min-height: 6.5rem;
  min-width: 100%;
  outline: none;
  overflow: auto;
  resize: vertical;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Comment
  </label>
  <textarea
    className="c2"
    defaultValue="foo"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter your comment"
    required={true}
  />
</div>
`;

exports[`TextArea Matches the snapshot 1`] = `
.c1 {
  color: #000000;
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.0166em;
  -moz-letter-spacing: 0.0166em;
  -ms-letter-spacing: 0.0166em;
  letter-spacing: 0.0166em;
  line-height: 1.1666;
  margin: 0;
}

input + .c1 {
  margin-left: 0.5rem;
}

.c0 {
  margin: 0 0 1.5rem;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 0.25rem;
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: calc(1rem - 2px);
  margin: 0;
  outline: none;
  padding: 0.5rem;
  min-height: 6.5rem;
  min-width: 100%;
  outline: none;
  overflow: auto;
  resize: vertical;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Comment
  </label>
  <textarea
    className="c2"
    defaultValue="foo"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Enter your comment"
    required={true}
  />
</div>
`;
